# onrobot-safe-rl

./: .gitignore  README.md  SAC_PAPER_SETTING_EXPERIMENTS.md  SAC_SINGLE_ENV_TODO.md  requirements.txt
artifacts/: random_action_distribution.csv
collector/: __init__.py  actor_runner.py  client.py  legacy_env.py
common/: __init__.py  config_schema.py  protocol.py  transition.py
config/: common.yaml  go2.yaml  real_robot.yaml  simulation.yaml
controller/: CMakeLists.txt  main.cpp
controller/command/: action_filter.hpp  action_mapper.hpp  command_projector.hpp  crc32.hpp  lowlevel_commander.cpp  lowlevel_commander.hpp
controller/realtime/: controller.cpp  controller.hpp  policy_scheduler.hpp  state_snapshot.hpp  state_synchronizer.hpp
controller/safety/: imu_utils.hpp  motion_service.cpp  motion_service.hpp  safety_supervisor.hpp
controller/transport/: config_loader.hpp  dds_bridge.hpp  ipc_server.cpp  policy_protocol.hpp  policy_receiver.hpp
learner/: __init__.py  checkpoint.py  learner.py
rl/: __init__.py  backend.py
scripts/: ipc_motion_test.py  plot_random_action_distribution.py
tests/: test_agent_backends.py  test_control_schedule.py  test_experiment_infrastructure.py  test_fused_utd.py  test_reward_semantics.py  test_tanh_distribution.py  test_unstable_reset.py
train/: README.md  __init__.py  __main__.py  _debug_agent_log.py  action_filter.py  checkpoint.py  config.py  dds.py  env.py  evaluation.py  gym_env.py  ipc.py  learner.py  logging.py  loop.py  main.py  obs.py  profiling.py  recovery.py  rolling_metrics.py  types.py  velocity.py  (+1 more)
(+68 files in other folders)
